[gd_scene load_steps=9 format=3 uid="uid://5up8kygpkrbk"]

[ext_resource type="Texture2D" uid="uid://ba7q8oeto87l5" path="res://graphics/ship/playerShip1_blue.png" id="1_8fgko"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_j6nna"]
[ext_resource type="AudioStream" uid="uid://drhpvjhip8fpa" path="res://audio/Laser.wav" id="3_7ow0a"]

[sub_resource type="Gradient" id="Gradient_112o6"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_r14t2"]
gradient = SubResource("Gradient_112o6")

[sub_resource type="Curve" id="Curve_lk6ij"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.504167, 0.797823), -1.07201, -1.07201, 0, 0, Vector2(0.997917, 0.353033), -0.336963, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_uonaw"]
curve = SubResource("Curve_lk6ij")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f627s"]
particle_flag_disable_z = true
gravity = Vector3(0, 20, 0)
scale_min = 9.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_uonaw")
color = Color(1, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_r14t2")

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_j6nna")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-1, 38)
process_material = SubResource("ParticleProcessMaterial_f627s")
lifetime = 0.1

[node name="PlayerImage" type="Sprite2D" parent="."]
texture = ExtResource("1_8fgko")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-10, -38, 8, -38, 13, -12, 36, 1, 41, -1, 45, -7, 50, -6, 47, 25, 43, 25, 41, 21, 34, 24, 14, 28, 8, 38, -9, 38, -15, 28, -36, 25, -42, 21, -43, 26, -47, 26, -50, -5, -46, -7, -41, -1, -36, 1, -13, -12)

[node name="LaserStartPos" type="Marker2D" parent="."]
position = Vector2(0, -100)

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="laser_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7ow0a")
volume_db = -8.0

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
